--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ button
 }
 button:hover 
 {
-  background-color: #333232;
+  background-color: #130629;
 }
 
 #menu 
@@ -87,14 +87,14 @@ label {
   text-decoration: underline;
 }
 input {
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(250, 250, 250, 0.8);
   height: 40px;
   line-height: 40px;
   border-radius: 20px;
   padding: 0 20px;
   border: none;
   margin-bottom: 20px;
-  color:white;
+  color:rgb(11, 11, 11);
 }
 button {
   background: #080808;
