Added navbar styles for improved layout and button design

--- a/contact.css
+++ b/contact.css
@@ -36,6 +36,19 @@ button:hover
   text-decoration: underline;
   color: #e5e4e7;
 }
+
+.navbar{
+  position: absolute;
+  top: 20px;
+  align-items: center;
+  gap: 12px;
+}
+.navbar button{
+  font-size: 20px;
+  padding: 8px 12px;
+  border-radius: 10px;
+}
+
 button {
   background: #080808;
   color: white;
