--- a/about.css
+++ b/about.css
@@ -125,3 +125,15 @@ button {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+
+.navbar{
+  position: absolute;
+  top: 20px;
+  align-items: center;
+  gap: 12px;
+}
+.navbar button{
+  font-size: 20px;
+  padding: 8px 12px;
+  border-radius: 10px;
+}
