--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: auto;
     box-sizing: border-box;
 }
 
@@ -18,6 +18,9 @@ body {
     justify-content: space-between;
     min-height: 100vh;
     padding: 60px 20px 0;
+    margin: 0 auto;
+    width: 100%;
+
 }
 
 .about-content {
