--- a/home.css
+++ b/home.css
@@ -108,6 +108,7 @@ button {
   color: #f0eef3;
   box-shadow: 0 8px 30px rgba(0,0,0,0.45);
   text-align: center;
+  border: 3px solid rgba(255,255,255,0.1);
 }
 
 .qr-code h2, .password-generator h3{
