--- a/qrcode.css
+++ b/qrcode.css
@@ -11,24 +11,20 @@ body {
     color: #f5f5f5;
 }
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    color: #f5f5f5;
-    flex-direction: column;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-    border-radius: 5px;
-    width: auto;
-    margin-bottom: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
+    background: rgba(0,0,0,0.45);
+    padding: 30px;
+    border-radius: 10px;
+    width: fit-content;
+    margin: 100px auto;
+    box-shadow: 0 8px 30px rgba(0,0,0,0.45);
+    text-align: center;
+    border: 7px solid rgba(255, 255, 255, 0.1);
+  
 }
-.container p {
-    font-size: 1.5rem;
+.container h1 {
+    font-size: 2rem;
     margin-bottom: 20px;
-    text-decoration: solid underline;
+    color: #f0ecec;
 }
 .container input {
     padding: 10px;
@@ -45,6 +41,7 @@ body {
     color: #f0ecec;
     cursor: pointer;
     font-size: 1rem;
+    border-radius: 10px;
 }
 .container button:hover {
     background-color: #033a74;
