--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ button
 }
 button:hover 
 {
-  background-color: #130629;
+  background-color: #1d0644;
 }
 
 #menu 
@@ -59,13 +59,13 @@ button:hover
 .login {
   border: 1px solid white;
   width: 400px;
-  min-height: 500px;
+  min-height: 300px;
   margin: 50px auto;
   padding: 20px;
 
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  overflow: visible;
+  
 }
 
 form {
@@ -76,7 +76,7 @@ form {
   height: 100%;
   flex-direction: column;
   display: flex;
-  gap: 40px;
+  gap: 20px;
 
 }
 
@@ -86,7 +86,7 @@ h1 {
   text-align: center;
   font-size: 50px;
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.8);
-  margin-bottom: 60px;
+  margin-bottom: 10px;
   text-decoration: underline;
 }
 
@@ -96,7 +96,7 @@ label {
   font-size: 20px;
   letter-spacing: 2px;
   padding-left: 10px;
-  text-decoration: underline;
+  
 }
 input {
   background: rgba(250, 250, 250, 0.8);
@@ -105,6 +105,7 @@ input {
   border-radius: 20px;
   padding: 0 20px;
   border: none;
+  border-radius: 10px;
   margin-bottom: 20px;
   color:rgb(11, 11, 11);
 }
@@ -112,7 +113,7 @@ button {
   background: #080808;
   color: white;
   border: none;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
